# vcpl

./: .gitignore  README  default.nix  shell.nix
compiler/: default.nix  vcpl.cabal
compiler/src/Vcpl/: Syntax.hs
compiler/src/Vcpl/Parse/: Lex.x  Parse.y
compiler/test/Vcpl/Parse/: LexSpec.hs
compiler/testdata/lex/: empty.tokens  identity.tokens  identity.vcpl
