cabal-version: >= 1.10
build-type: Simple

name: vcpl
version: 0.0.0.0

library
  hs-source-dirs:
    src

  exposed-modules:
    Vcpl.Parse.Lex,
    Vcpl.Parse.Parse,
    Vcpl.Syntax

  default-language:
    Haskell2010

  ghc-options:
    -Wall
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns

  default-extensions:
    ApplicativeDo,
    DataKinds,
    DerivingStrategies,
    FlexibleInstances,
    GADTs,
    KindSignatures,
    LambdaCase,
    PatternSynonyms,
    RankNTypes,
    StandaloneDeriving,
    StrictData,
    TypeOperators

  build-depends:
    array,
    base,
    bytestring,
    lens

test-suite test
  type: exitcode-stdio-1.0

  hs-source-dirs:
    test

  main-is:
    Main.hs

  default-language:
    Haskell2010

  ghc-options:
    -Wall
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns

  default-extensions:
    ApplicativeDo,
    StrictData,
    TypeApplications

  build-depends:
    base,
    hspec,
    vcpl
